--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,8 @@ endif(COPASI_DEPENDENCY_DIR AND EXISTS ${COPASI_DEPENDENCY_DIR})
 find_package(CLAPACK REQUIRED)
 
 SET (SOURCES main.cpp)
-
 include_directories(${CLAPACK_INCLUDE_DIR})
 add_executable(cluster_newton ${SOURCES})
 target_link_libraries(cluster_newton ${CLAPACK_LIBRARIES})
+
+add_subdirectory(matrix)
